Fixed Default Page to index.html
Fixed Class of 2020 page as well.

--- a/Classof2020.html
+++ b/Classof2020.html
@@ -2,17 +2,17 @@
 
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <title>Class of 2020</title>
+    <title>Dover Community Outreach Network</title>
     <script src="code.js" type="text/javascript" charset="utf-8"></script>
     <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 
-<body onload="classOf2020()">
+<body onload="ClassOf2020()">
 
     <div class="pagebackground">
         <div class="textfield">
             <div class="header">
-                <a href="home.html">
+                <a href="index.html">
                     	<h1>
 
 							Dover Community
@@ -29,13 +29,13 @@
                     <tr width="100%">
                         <th width="20%">
                             <a href="navCommunityServiceClubs.html">
-                        <button class="clublink">Community Service Clubs</button>
-                    </a>
+								<button class="clublink">Community Service Clubs</button>
+							</a>
                         </th>
                         <th width="20%">
                             <a href="navArtsClubs.html">
                                 <button class="clublink">Arts Clubs</button>
-                   </a>
+							</a>
                         </th>
                         <th width="20%">
                             <a href="navLeadershipClubs.html">
@@ -43,7 +43,7 @@
                             </a>
                         </th>
                         <th width="20%">
-                            <a href="navAcademicCompClubs.html">
+                            <a href="AcademicCompClubsNav.html">
                                 <button class="clublink">Academic Competition Clubs</button>
                             </a>
                         </th>
@@ -56,14 +56,16 @@
                 </table>
             </div>
             <div class="content">
-                <image src="[ENTER]">
                     <p id="ClubName">Title</p>
                     <p id="Description">Put stuff here</p>
             </div>
-
+			<div class="footerA">
+				<div class="footerB">
+					<div class="footerC">
+				
+					</div>
+				</div>
+			</div>
         </div>
+		
     </div>
-
-</body>
-
-</html>
