--- a/YouthToYouth.html
+++ b/YouthToYouth.html
@@ -12,7 +12,7 @@
     <div class="pagebackground">
         <div class="textfield">
             <div class="header">
-                <a href="home.html">
+                <a href="index.html">
                     	<h1>
 
 							Dover Community
