Fixed class of 2020

--- a/Classof2020.html
+++ b/Classof2020.html
@@ -7,7 +7,7 @@
     <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 
-<body onload="ClassOf2020()">
+<body onload="classOf2020()">
 
     <div class="pagebackground">
         <div class="textfield">
