--- a/home.html
+++ b/home.html
@@ -3,7 +3,8 @@
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <title>Dover Community Outreach Network</title>
-    <script src="code.js" type="text/javascript" charset="utf-8"></script>
+    <script src="pages.js" type="text/javascript" charset="utf-8"></script>
+    <script src="pageControl.js" type="text/javascript" charset="utf-8"></script>
     <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -62,12 +63,12 @@
 			<div class="footerA">
 				<div class="footerB">
 					<div class="footerC">
-				
+
 					</div>
 				</div>
 			</div>
         </div>
-		
+
     </div>
 
 </body>
