--- a/home.html
+++ b/home.html
@@ -29,8 +29,8 @@
                 <table width="100%">
                     <tr width="100%">
                         <th width="20%">
-                            <a href="navCommunityServiceClubs.html">
-								<button class="clublink">Community Service Clubs</button>
+
+								<button class="clublink">Community servceicece Clubs</button>
 							</a>
                         </th>
                         <th width="20%">
