Final Testing for Today
AAA

--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
     <div class="pagebackground">
         <div class="textfield">
             <div class="header">
-                <a href="home.html">
+                <a href="index.html">
                     	<h1>
 
 							Dover Community
@@ -29,14 +29,14 @@
                 <table width="100%">
                     <tr width="100%">
                         <th width="20%">
-
-								<button class="clublink">Community servceicece Clubs</button>
-							</a>
+                            <a href="navCommunityServiceClubs.html">
+                <button class="clublink">Community Service Clubs</button>
+              </a>
                         </th>
                         <th width="20%">
                             <a href="navArtsClubs.html">
                                 <button class="clublink">Arts Clubs</button>
-							</a>
+              </a>
                         </th>
                         <th width="20%">
                             <a href="navLeadershipClubs.html">
