--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <title>Dover Community Outreach Network</title>
-    <script src="code.js" type="text/javascript" charset="utf-8"></script>
+    <script src="pages.js" type="text/javascript" charset="utf-8"></script>
+    <script src="pageControl.js" type="text/javascript" charset="utf-8"></script>
     <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -29,13 +30,13 @@
                     <tr width="100%">
                         <th width="20%">
                             <a href="navCommunityServiceClubs.html">
-								<button class="clublink">Community Service Clubs</button>
-							</a>
+                <button class="clublink">Community Service Clubs</button>
+              </a>
                         </th>
                         <th width="20%">
                             <a href="navArtsClubs.html">
                                 <button class="clublink">Arts Clubs</button>
-							</a>
+              </a>
                         </th>
                         <th width="20%">
                             <a href="navLeadershipClubs.html">
@@ -62,12 +63,12 @@
 			<div class="footerA">
 				<div class="footerB">
 					<div class="footerC">
-				
+
 					</div>
 				</div>
 			</div>
         </div>
-		
+
     </div>
 
 </body>
