--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						</h1>
                 </a>
             </div>
-            <div class="navigation">
+            <div class="btn-6">
                 <table width="100%">
                     <tr width="100%">
                         <th width="20%">
