--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
 						</h1>
                 </a>
             </div>
-            <div class="btn-6">
+            <div class="navigation">
                 <table width="100%">
                     <tr width="100%">
                         <th width="20%">
                             <a href="navCommunityServiceClubs.html">
-                <button class="clublink">Community Service Clubs</button>
+                <button class="btn-6">Community Service Clubs</button>
               </a>
                         </th>
                         <th width="20%">
