--- a/index.html
+++ b/index.html
@@ -29,9 +29,7 @@
                 <table width="100%">
                     <tr width="100%">
                         <th width="20%">
-                            <a href="navCommunityServiceClubs.html">
-                <button class="btn-6">Community Service Clubs</button>
-              </a>
+                           <a class="btn-6" href="#">Position Aware<span></span></a>
                         </th>
                         <th width="20%">
                             <a href="navArtsClubs.html">
