--- a/testsocialmedia.html
+++ b/testsocialmedia.html
@@ -5,7 +5,8 @@
     <title>Social Media Test</title>
     <script src="code.js" type="text/javascript" charset="utf-8"></script>
     <link href="style.css" rel="stylesheet" type="text/css">
-</head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    </head>
 
 <body onload="NJROTC()">
 
@@ -56,13 +57,13 @@
                 </table>
             </div>
             <div class="content">
-                    <p id="ClubName">Title</p>
+                    <p id="ClubName">Template Name</p>
                     <p id="Description">Put stuff here</p>
             </div>
 			<div class="footerA">
 				<div class="footerB">
 					<div class="footerC">
-
+            <div class="SocialMedia"><i class="fa fa-facebook-square" style="font-size:30px; padding-top:20px; padding-left: 10px; float: right; cursor: pointer;"></i></i>
 					</div>
 				</div>
 			</div>
