Undo to everything I did :(

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
                 <table width="100%">
                     <tr width="100%">
                         <th width="20%">
-                           <a class="btn-6" href="#">Position Aware<span></span></a>
+                          <a href="navCommunityServiceClubs.html">
+                      <button class="clublink">Community Service Clubs</button>
+                          </a>
                         </th>
                         <th width="20%">
                             <a href="navArtsClubs.html">
