--- a/testsocialmedia.html
+++ b/testsocialmedia.html
@@ -63,7 +63,7 @@
 			<div class="footerA">
 				<div class="footerB">
 					<div class="footerC">
-            <div class="SocialMedia"><a href="https://fontawesome.com/icons/facebook-square?style=brands"><i class="fa fa-facebook-square" style="font-size:30px; padding-top:20px; padding-left: 10px; float: right; cursor: pointer; color: #000000;text-decoration: none;"></i></a></i>
+            <div class="SocialMedia"><a href="https://fontawesome.com/icons/facebook-square?style=brands" target="_blank"><i class="fa fa-facebook-square" style="font-size:30px; padding-top:20px; padding-left: 10px; float: right; cursor: pointer; color: #000000;text-decoration: none;"></i></a></i>
 					</div>
 				</div>
 			</div>
