Addition of Social Media Button thing

--- a/testsocialmedia.html
+++ b/testsocialmedia.html
@@ -1,73 +1,73 @@
 <!DOCTYPE html>
 
 <head>
-  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <title>Social Media Test</title>
-  <script src="code.js" type="text/javascript" charset="utf-8"></script>
-  <link href="style.css" rel="stylesheet" type="text/css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-</head>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <title>Social Media Test</title>
+    <script src="code.js" type="text/javascript" charset="utf-8"></script>
+    <link href="style.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    </head>
 
 <body onload="NJROTC()">
 
-  <div class="pagebackground">
-    <div class="textfield">
-      <div class="header">
-        <a href="index.html">
-          <h1>
+    <div class="pagebackground">
+        <div class="textfield">
+            <div class="header">
+                <a href="index.html">
+                    	<h1>
 
-            Dover Community
+							Dover Community
 
-            <br>
+							<br>
 
-            Outreach Network
+							Outreach Network
 
-          </h1>
-        </a>
-      </div>
-      <div class="navigation">
-        <table width="100%">
-          <tr width="100%">
-            <th width="20%">
-              <a href="navCommunityServiceClubs.html">
-                <button class="clublink">Community Service Clubs</button>
-              </a>
-            </th>
-            <th width="20%">
-              <a href="navArtsClubs.html">
-                <button class="clublink">Arts Clubs</button>
-              </a>
-            </th>
-            <th width="20%">
-              <a href="navLeadershipClubs.html">
-                <button class="clublink">Leadership Clubs</button>
-              </a>
-            </th>
-            <th width="20%">
-              <a href="AcademicCompClubsNav.html">
-                <button class="clublink">Academic Competition Clubs</button>
-              </a>
-            </th>
-            <th width="20%">
-              <a href="navSports.html">
-                <button class="clublink">Sports</button>
-              </a>
-            </th>
-          </tr>
-        </table>
-      </div>
-      <div class="content">
-        <p id="ClubName">Template Name</p>
-        <p id="Description">Put stuff here</p>
-      </div>
-      <div class="footerA">
-        <div class="footerB">
-          <div class="footerC">
-            <div class="SocialMedia"><a href="https://fontawesome.com/icons/facebook-square?style=brands"><i class="fa fa-facebook-square" style="font-size:30px; padding-top:20px; padding-left: 10px; float: right; cursor: pointer; color: #000000;text-decoration: none;"></i></a></i>
+						</h1>
+                </a>
             </div>
-          </div>
+            <div class="navigation">
+                <table width="100%">
+                    <tr width="100%">
+                        <th width="20%">
+                            <a href="navCommunityServiceClubs.html">
+								<button class="clublink">Community Service Clubs</button>
+							</a>
+                        </th>
+                        <th width="20%">
+                            <a href="navArtsClubs.html">
+                                <button class="clublink">Arts Clubs</button>
+							</a>
+                        </th>
+                        <th width="20%">
+                            <a href="navLeadershipClubs.html">
+                        <button class="clublink">Leadership Clubs</button>
+                            </a>
+                        </th>
+                        <th width="20%">
+                            <a href="AcademicCompClubsNav.html">
+                                <button class="clublink">Academic Competition Clubs</button>
+                            </a>
+                        </th>
+                        <th width="20%">
+                            <a href="navSports.html">
+                                <button class="clublink">Sports</button>
+                            </a>
+                        </th>
+                    </tr>
+                </table>
+            </div>
+            <div class="content">
+                    <p id="ClubName">Template Name</p>
+                    <p id="Description">Put stuff here</p>
+            </div>
+			<div class="footerA">
+				<div class="footerB">
+					<div class="footerC">
+            <div class="SocialMedia"><i class="fa fa-facebook-square" style="font-size:30px; padding-top:20px; padding-left: 10px; float: right; cursor: pointer;"></i></i>
+					</div>
+				</div>
+			</div>
         </div>
-      </div>
 
     </div>
 
