--- a/testsocialmedia.html
+++ b/testsocialmedia.html
@@ -22,51 +22,50 @@
 
             Outreach Network
 
-						</h1>
-                </a>
+          </h1>
+        </a>
+      </div>
+      <div class="navigation">
+        <table width="100%">
+          <tr width="100%">
+            <th width="20%">
+              <a href="navCommunityServiceClubs.html">
+                <button class="clublink">Community Service Clubs</button>
+              </a>
+            </th>
+            <th width="20%">
+              <a href="navArtsClubs.html">
+                <button class="clublink">Arts Clubs</button>
+              </a>
+            </th>
+            <th width="20%">
+              <a href="navLeadershipClubs.html">
+                <button class="clublink">Leadership Clubs</button>
+              </a>
+            </th>
+            <th width="20%">
+              <a href="AcademicCompClubsNav.html">
+                <button class="clublink">Academic Competition Clubs</button>
+              </a>
+            </th>
+            <th width="20%">
+              <a href="navSports.html">
+                <button class="clublink">Sports</button>
+              </a>
+            </th>
+          </tr>
+        </table>
+      </div>
+      <div class="content">
+        <p id="ClubName">Template Name</p>
+        <p id="Description">Put stuff here</p>
+      </div>
+      <div class="footerA">
+        <div class="footerB">
+          <div class="footerC">
+            <div class="SocialMedia"><a href="https://fontawesome.com/icons/facebook-square?style=brands" targer="_blank"><i class="fa fa-facebook-square" style="font-size:30px; padding-top:20px; padding-left: 10px; float: right; cursor: pointer; color: #ffffff;text-decoration: none;"></i></a></i>
             </div>
-            <div class="navigation">
-                <table width="100%">
-                    <tr width="100%">
-                        <th width="20%">
-                            <a href="navCommunityServiceClubs.html">
-								<button class="clublink">Community Service Clubs</button>
-							</a>
-                        </th>
-                        <th width="20%">
-                            <a href="navArtsClubs.html">
-                                <button class="clublink">Arts Clubs</button>
-							</a>
-                        </th>
-                        <th width="20%">
-                            <a href="navLeadershipClubs.html">
-                        <button class="clublink">Leadership Clubs</button>
-                            </a>
-                        </th>
-                        <th width="20%">
-                            <a href="AcademicCompClubsNav.html">
-                                <button class="clublink">Academic Competition Clubs</button>
-                            </a>
-                        </th>
-                        <th width="20%">
-                            <a href="navSports.html">
-                                <button class="clublink">Sports</button>
-                            </a>
-                        </th>
-                    </tr>
-                </table>
-            </div>
-            <div class="content">
-                    <p id="ClubName">Template Name</p>
-                    <p id="Description">Put stuff here</p>
-            </div>
-			<div class="footerA">
-				<div class="footerB">
-					<div class="footerC">
-            <div class="SocialMedia"><a href="https://fontawesome.com/icons/facebook-square?style=brands" target="_blank"><i class="fa fa-facebook-square" style="font-size:30px; padding-top:20px; padding-left: 10px; float: right; cursor: pointer; color: #ffffff;text-decoration: none;"></i></a></i>
-					</div>
-				</div>
-			</div>
+          </div>
         </div>
       </div>
 
