--- a/testsocialmedia.html
+++ b/testsocialmedia.html
@@ -22,100 +22,8 @@
 
 							Outreach Network
 
-<<<<<<< HEAD
-						</h1>
-                </a>
-            </div>
-            <div class="navigation">
-                <table width="100%">
-                    <tr width="100%">
-                        <th width="20%">
-                            <a href="navCommunityServiceClubs.html">
-								<button class="clublink">Community Service Clubs</button>
-							</a>
-                        </th>
-                        <th width="20%">
-                            <a href="navArtsClubs.html">
-                                <button class="clublink">Arts Clubs</button>
-							</a>
-                        </th>
-                        <th width="20%">
-                            <a href="navLeadershipClubs.html">
-                        <button class="clublink">Leadership Clubs</button>
-                            </a>
-                        </th>
-                        <th width="20%">
-                            <a href="AcademicCompClubsNav.html">
-                                <button class="clublink">Academic Competition Clubs</button>
-                            </a>
-                        </th>
-                        <th width="20%">
-                            <a href="navSports.html">
-                                <button class="clublink">Sports</button>
-                            </a>
-                        </th>
-                    </tr>
-                </table>
-            </div>
-            <div class="content">
-                    <p id="ClubName">Template Name</p>
-                    <p id="Description">Put stuff here</p>
-            </div>
-			<div class="footerA">
-				<div class="footerB">
-					<div class="footerC">
-            <div class="SocialMedia"><i class="fa fa-facebook-square" style="font-size:30px; padding-top:20px; padding-left: 10px; float: right; cursor: pointer;"></i></i>
-					</div>
-				</div>
-			</div>
-=======
-<<<<<<< HEAD
-						</h1>
-                </a>
-            </div>
-            <div class="navigation">
-                <table width="100%">
-                    <tr width="100%">
-                        <th width="20%">
-                            <a href="navCommunityServiceClubs.html">
-								<button class="clublink">Community Service Clubs</button>
-							</a>
-                        </th>
-                        <th width="20%">
-                            <a href="navArtsClubs.html">
-                                <button class="clublink">Arts Clubs</button>
-							</a>
-                        </th>
-                        <th width="20%">
-                            <a href="navLeadershipClubs.html">
-                        <button class="clublink">Leadership Clubs</button>
-                            </a>
-                        </th>
-                        <th width="20%">
-                            <a href="AcademicCompClubsNav.html">
-                                <button class="clublink">Academic Competition Clubs</button>
-                            </a>
-                        </th>
-                        <th width="20%">
-                            <a href="navSports.html">
-                                <button class="clublink">Sports</button>
-                            </a>
-                        </th>
-                    </tr>
-                </table>
-            </div>
-            <div class="content">
-                    <p id="ClubName">Template Name</p>
-                    <p id="Description">Put stuff here</p>
-            </div>
-			<div class="footerA">
-				<div class="footerB">
-					<div class="footerC">
-            <div class="SocialMedia"><a href="https://fontawesome.com/icons/facebook-square?style=brands" target="_blank"><i class="fa fa-facebook-square" style="font-size:30px; padding-top:20px; padding-left: 10px; float: right; cursor: pointer; color: #000000;text-decoration: none;"></i></a></i>
-					</div>
-				</div>
-			</div>
-=======
+
+
           </h1>
         </a>
       </div>
@@ -157,11 +65,10 @@
       <div class="footerA">
         <div class="footerB">
           <div class="footerC">
-            <div class="SocialMedia"><a href="https://fontawesome.com/icons/facebook-square?style=brands"><i class="fa fa-facebook-square" style="font-size:30px; padding-top:20px; padding-left: 10px; float: right; cursor: pointer; color: #000000;text-decoration: none;"></i></a></i>
+            <div class="SocialMedia"><a href="https://fontawesome.com/icons/facebook-square?style=brands"><i class="fa fa-facebook-square" style="font-size:30px; padding-top:20px; padding-left: 10px; float: right; cursor: pointer; color: #ffffff;text-decoration: none;"></i></a></i>
             </div>
           </div>
->>>>>>> 43f84a01f9c5af68717900f1e597c0a60f9c1d68
->>>>>>> 4078fe388dbe35915ed8ad6da2c32bb82bc223ef
+
         </div>
 
     </div>
