--- a/index.html
+++ b/index.html
@@ -1,70 +1,85 @@
 <!DOCTYPE html>
 
 <head>
-  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <title>Dover Community Outreach Network</title>
-  <script src="pages.js" type="text/javascript" charset="utf-8"></script>
-  <script src="pageControl.js" type="text/javascript" charset="utf-8"></script>
-  <link href="style.css" rel="stylesheet" type="text/css">
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <title>Dover Community Outreach Network</title>
+    <script src="code.js" type="text/javascript" charset="utf-8"></script>
+    <script src="pageControl.js" type="text/javascript" charset="utf-8"></script>
+    <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body onload="dconHome()">
 
-  <div class="pagebackground">
-    <div class="textfield">
-      <div class="header">
-        <a href="index.html">
-          <h1>
+    <div class="pagebackground">
+        <div class="textfield">
+            <div class="header">
+                <a href="index.html">
+                    	<h1>
 
-            Dover Community
+							Dover Community
 
-            <br>
+							<br>
 
-            Outreach Network
+							Outreach Network
 
-          </h1>
-        </a>
-      </div>
-      <div class="navigation">
-        <table width="100%">
-          <tr width="100%">
-            <th width="20%">
-              <a href="navCommunityServiceClubs.html">
-                <button class="clublink">Community Service Clubs</button>
-              </a>
-            </th>
-            <th width="20%">
-              <a href="navLeadershipClubs.html">
-                <button class="clublink">Leadership Clubs</button>
-              </a>
-            </th>
-            <th width="20%">
-              <a href="AcademicCompClubsNav.html">
-                <button class="clublink">Academic Competition Clubs</button>
-              </a>
-            </th>
-            <th width="20%">
-              <a href="navSports.html">
-                <button class="clublink">Sports</button>
-              </a>
-            </th>
-          </tr>
-        </table>
-      </div>
-      <div class="content">
-        <p id="ClubName">Title</p>
-        <p id="Description">Put stuff here</p>
-      </div>
-      <div class="footerA">
-        <div class="footerB">
-          <div class="footerC">
+						</h1>
+                </a>
+            </div>
+            <div class="navigation">
+                <table width="100%">
+                    <tr width="100%">
+                        <th width="20%">
+                            <a href="navCommunityServiceClubs.html">
+								<div class="clublink">Community Service Clubs</div>
+							</a>
+                        </th>
+                        <th width="20%">
+                            <a href="navArtsClubs.html">
+                                <div class="clublink">
+                                  Arts Clubs
+                                </div>
+							</a>
+                        </th>
+                        <th width="20%">
+                          <div class="clublink">
+                            <span>Leadership Clubs</span>
+                              <div class="clublink-content">
+                                <a href="Interact.html"><button class="clublink"> Interact Club </button></a>
+                        				<a href="Key.html"><button class="clublink"> Key Club </button></a>
+                        				<a href="NationalHonors.html"><button class="clublink"> National Honors Society </button></a>
+                        				<a href="AthleticLeadership.html"><button class="clublink"> Athletic Leadership </button></a>
+                        				<a href="EarthAction.html"><button class="clublink"> Earth Action </button></a>
+                        				<a href="TechNationalHonors.html"><button class="clublink"> NH Technical Honor Society </button></a>
+                              </div>
+                          </div>
+                        </th>
+                        <th width="20%">
+                          <div class="clublink">
+                            Academic Competition Clubs
+                          </div>
+                        </th>
+                        <th width="20%">
+                          <div class="clublink">
+                            Sports
+                          </div>
+                        </th>
+                    </tr>
+                </table>
+            </div>
+            <div class="content">
+                    <p id="ClubName">Title</p>
+                    <p id="Description">Put stuff here</p>
+            </div>
+			<div class="footerA">
+				<div class="footerB">
+					<div class="footerC">
 
-          </div>
+					</div>
+				</div>
+			</div>
         </div>
-      </div>
-    </div>
 
-  </div>
+    </div>
 
 </body>
 
