--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
     <div class="pagebackground">
         <div class="textfield">
             <div class="header">
-                <a href="index.html">
+                <a href="home.html">
                     	<h1>
 
 							Dover Community
@@ -30,13 +30,13 @@
                     <tr width="100%">
                         <th width="20%">
                             <a href="navCommunityServiceClubs.html">
-                <button class="clublink">Community Service Clubs</button>
-              </a>
+								<button class="clublink">Community Service Clubs</button>
+							</a>
                         </th>
                         <th width="20%">
                             <a href="navArtsClubs.html">
                                 <button class="clublink">Arts Clubs</button>
-              </a>
+							</a>
                         </th>
                         <th width="20%">
                             <a href="navLeadershipClubs.html">
