--- a/index.html
+++ b/index.html
@@ -29,9 +29,15 @@
                 <table width="100%">
                     <tr width="100%">
                         <th width="20%">
-                            <a href="navCommunityServiceClubs.html">
-								<div class="clublink">Community Service Clubs</div>
-							</a>
+                          <span><p class="clubButtons">Community Service Clubs</p></span>
+                            <div class="clublink-content">
+                              <button onclick="interactClub()" class="clublink"> Interact Club </button><br>
+                              <button onclick="keyClub()" class="clublink"> Key Club </button><br>
+                              <button onclick="NHS()" class="clublink"> National Honors Society </button><br>
+                              <button onclick="athleticLeadershipCouncil()" class="clublink"> Athletic Leadership </button><br>
+                              <button onclick="earthAction()" class="clublink"> Earth Action </button><br>
+                              <button onclick="TNHS()" class="clublink"> NH Technical Honors Society </button><br>
+                            </div>
                         </th>
                         <th width="20%">
                             <a href="navArtsClubs.html">
@@ -41,21 +47,16 @@
 							</a>
                         </th>
                         <th width="20%">
-                          <div class="clublink">
-                            <span>Leadership Clubs</span>
-                              <div class="clublink-content">
-                                <a href="Interact.html"><button class="clublink"> Interact Club </button></a>
-                        				<a href="Key.html"><button class="clublink"> Key Club </button></a>
-                        				<a href="NationalHonors.html"><button class="clublink"> National Honors Society </button></a>
-                        				<a href="AthleticLeadership.html"><button class="clublink"> Athletic Leadership </button></a>
-                        				<a href="EarthAction.html"><button class="clublink"> Earth Action </button></a>
-                        				<a href="TechNationalHonors.html"><button class="clublink"> NH Technical Honor Society </button></a>
-                              </div>
-                          </div>
+                            <a href="navLeadershipClubs.html">
+                        <div class="clublink">
+                          Leadership Clubs
+                        </div>
+                            </a>
                         </th>
                         <th width="20%">
-                          <div class="clublink">
-                            Academic Competition Clubs
+                            <a href="AcademicCompClubsNav.html">
+                                <div class="clublink">
+                                  Academic Competition Clubs
                           </div>
                         </th>
                         <th width="20%">
