--- a/test/home.html
+++ b/test/home.html
@@ -26,7 +26,7 @@
             </div>
 
             <div class="navigation">
-                <table width="100%" border="1">
+                <table width="100%">
                     <tr width="100%">
                         <th width="20%">
 							<div class="clublink">
