--- a/test/home.html
+++ b/test/home.html
@@ -44,14 +44,23 @@
 
                         <th width="20%">
 							<div class="clublink">
-								<span><p class="clubButtons">Arts Clubs</p></span>
+								<span><p class="clubButtons">The Arts</p></span>
 								<div class="clublink-content">
-									<button onclick="interactClub()" class="clublink"> The Tide </button><br>
-									<button onclick="keyClub()" class="clublink"> Drama Club </button><br>
-									<button onclick="NHS()" class="clublink">Percussion Ensemble </button><br>
-									<button onclick="athleticLeadershipCouncil()" class="clublink"> Marching Band & Color Guard </button><br>
-									<button onclick="earthAction()" class="clublink"> Earth Action </button><br>
-									<button onclick="TNHS()" class="clublink"> NH Technical Honors Society </button><br>
+									<button onclick="theTide()" class="clublink"> The Tide </button><br>
+									<button onclick="dramaClub()" class="clublink"> Drama Club </button><br>
+									<button onclick="percussionEnsemble()" class="clublink">Percussion Ensemble </button><br>
+									<button onclick="colorGuard()" class="clublink"> Marching Band & Color Guard </button><br>
+									<button onclick="varietyShow()" class="clublink"> Variety Show </button><br>
+									<button onclick="jazzBand()" class="clublink"> Jazz Band </button><br>
+                  <button onclick="soundWaves()" class="clublink"> Soundwaves </button><br>
+                  <button onclick="TGC()" class="clublink"> Traditional Gaming Club </button><br>
+                  <button onclick="WAC()" class="clublink"> World Arts Club </button><br>
+                  <button onclick="photographyClub()" class="clublink"> Photography Club </button><br>
+                  <button onclick="latinClub()" class="clublink"> Latin Club </button><br>
+                  <button onclick="frenchClub()" class="clublink"> French Club </button><br>
+                  <button onclick="spanishClub()" class="clublink"> Spanish Club </button><br>
+                  <button onclick="ffa()" class="clublink"> Future Farmers of America </button><br>
+
 								</div>
 							</div>
                         </th>
